crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@comparison.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr-parse/comparison.tck
---
Ok(Expression(
  kind: NotEqual(Expression(
    kind: Grouping(Expression(
      kind: Equal(Expression(
        kind: Grouping(Expression(
          kind: GtEq(Expression(
            kind: Primary(Primary(
              span: Span(
                start: 2,
                end: 3,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 2,
                  end: 3,
                ),
                ident: Interned(12543183117416492085, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 2,
              end: 3,
            ),
          ), Expression(
            kind: Primary(Primary(
              span: Span(
                start: 7,
                end: 8,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 7,
                  end: 8,
                ),
                ident: Interned(12543183117416492085, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 7,
              end: 8,
            ),
          )),
          span: Span(
            start: 2,
            end: 8,
          ),
        )),
        span: Span(
          start: 1,
          end: 9,
        ),
      ), Expression(
        kind: Grouping(Expression(
          kind: LtEq(Expression(
            kind: Primary(Primary(
              span: Span(
                start: 14,
                end: 15,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 14,
                  end: 15,
                ),
                ident: Interned(12543183117416492085, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 14,
              end: 15,
            ),
          ), Expression(
            kind: Primary(Primary(
              span: Span(
                start: 19,
                end: 20,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 19,
                  end: 20,
                ),
                ident: Interned(17559175557623182033, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 19,
              end: 20,
            ),
          )),
          span: Span(
            start: 14,
            end: 20,
          ),
        )),
        span: Span(
          start: 13,
          end: 21,
        ),
      )),
      span: Span(
        start: 1,
        end: 21,
      ),
    )),
    span: Span(
      start: 0,
      end: 22,
    ),
  ), Expression(
    kind: Grouping(Expression(
      kind: Equal(Expression(
        kind: Grouping(Expression(
          kind: Gt(Expression(
            kind: Primary(Primary(
              span: Span(
                start: 28,
                end: 29,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 28,
                  end: 29,
                ),
                ident: Interned(14671982871472631300, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 28,
              end: 29,
            ),
          ), Expression(
            kind: Primary(Primary(
              span: Span(
                start: 32,
                end: 33,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 32,
                  end: 33,
                ),
                ident: Interned(12543183117416492085, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 32,
              end: 33,
            ),
          )),
          span: Span(
            start: 28,
            end: 33,
          ),
        )),
        span: Span(
          start: 27,
          end: 34,
        ),
      ), Expression(
        kind: Grouping(Expression(
          kind: Lt(Expression(
            kind: Primary(Primary(
              span: Span(
                start: 39,
                end: 40,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 39,
                  end: 40,
                ),
                ident: Interned(15401311348005721897, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 39,
              end: 40,
            ),
          ), Expression(
            kind: Primary(Primary(
              span: Span(
                start: 43,
                end: 44,
              ),
              kind: IntLit(Symbol(
                span: Span(
                  start: 43,
                  end: 44,
                ),
                ident: Interned(4091593736821351671, PhantomData),
              ), Decimal),
            )),
            span: Span(
              start: 43,
              end: 44,
            ),
          )),
          span: Span(
            start: 39,
            end: 44,
          ),
        )),
        span: Span(
          start: 38,
          end: 45,
        ),
      )),
      span: Span(
        start: 27,
        end: 45,
      ),
    )),
    span: Span(
      start: 26,
      end: 46,
    ),
  )),
  span: Span(
    start: 0,
    end: 46,
  ),
))
