crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@eof-error.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr-parse/eof-error.tck
---
Err(ParseErrors(
  errors: [
    ParseError(
      kind: ExpectedFound(
        expected: Some("\')\'"),
        found: Eof,
        span: None,
      ),
    ),
  ],
))
