crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@operators.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr/operators.tck
---
Ok(Expression(
  kind: Member(Expression(
    kind: Index(Expression(
      kind: Call(Expression(
        kind: Binding(Interned(6563574591185256773, PhantomData)),
        span: Span(
          start: 0,
          end: 1,
        ),
      ), [
        Expression(
          kind: Add(Expression(
            kind: Mul(Expression(
              kind: Member(Expression(
                kind: Add(Expression(
                  kind: IntLit(Interned(14894071113539278494, PhantomData), Decimal),
                  span: Span(
                    start: 3,
                    end: 4,
                  ),
                ), Expression(
                  kind: Mul(Expression(
                    kind: IntLit(Interned(14671982871472631300, PhantomData), Decimal),
                    span: Span(
                      start: 7,
                      end: 8,
                    ),
                  ), Expression(
                    kind: IntLit(Interned(12543183117416492085, PhantomData), Decimal),
                    span: Span(
                      start: 11,
                      end: 12,
                    ),
                  )),
                  span: Span(
                    start: 7,
                    end: 12,
                  ),
                )),
                span: Span(
                  start: 2,
                  end: 13,
                ),
              ), Interned(2995866885741978634, PhantomData)),
              span: Span(
                start: 2,
                end: 17,
              ),
            ), Expression(
              kind: Member(Expression(
                kind: IntLit(Interned(15401311348005721897, PhantomData), Decimal),
                span: Span(
                  start: 20,
                  end: 21,
                ),
              ), Interned(7671527146047673108, PhantomData)),
              span: Span(
                start: 20,
                end: 24,
              ),
            )),
            span: Span(
              start: 2,
              end: 24,
            ),
          ), Expression(
            kind: Member(Expression(
              kind: Div(Expression(
                kind: IntLit(Interned(12543183117416492085, PhantomData), Decimal),
                span: Span(
                  start: 28,
                  end: 29,
                ),
              ), Expression(
                kind: IntLit(Interned(15401311348005721897, PhantomData), Decimal),
                span: Span(
                  start: 32,
                  end: 33,
                ),
              )),
              span: Span(
                start: 27,
                end: 34,
              ),
            ), Interned(7671527146047673108, PhantomData)),
            span: Span(
              start: 27,
              end: 37,
            ),
          )),
          span: Span(
            start: 2,
            end: 37,
          ),
        ),
        Expression(
          kind: Equal(Expression(
            kind: IntLit(Interned(12543183117416492085, PhantomData), Decimal),
            span: Span(
              start: 39,
              end: 40,
            ),
          ), Expression(
            kind: Member(Expression(
              kind: FloatLit(Interned(13247015695336138815, PhantomData)),
              span: Span(
                start: 44,
                end: 47,
              ),
            ), Interned(12393608695761977456, PhantomData)),
            span: Span(
              start: 44,
              end: 53,
            ),
          )),
          span: Span(
            start: 39,
            end: 53,
          ),
        ),
      ]),
      span: Span(
        start: 0,
        end: 54,
      ),
    ), Expression(
      kind: Add(Expression(
        kind: IntLit(Interned(14671982871472631300, PhantomData), Decimal),
        span: Span(
          start: 55,
          end: 56,
        ),
      ), Expression(
        kind: Mul(Expression(
          kind: IntLit(Interned(15401311348005721897, PhantomData), Decimal),
          span: Span(
            start: 59,
            end: 60,
          ),
        ), Expression(
          kind: IntLit(Interned(12543183117416492085, PhantomData), Decimal),
          span: Span(
            start: 63,
            end: 64,
          ),
        )),
        span: Span(
          start: 59,
          end: 64,
        ),
      )),
      span: Span(
        start: 55,
        end: 64,
      ),
    )),
    span: Span(
      start: 0,
      end: 65,
    ),
  ), Interned(12393608695761977456, PhantomData)),
  span: Span(
    start: 0,
    end: 71,
  ),
))
