crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@recursion.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr-parse/recursion.tck
---
Err(ParseErrors(
  errors: [
    ParseError(
      kind: Recursion,
    ),
  ],
))
