crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@trailing-comma-call.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr-parse/trailing-comma-call.tck
---
Ok(Expression(
  span: Span(
    start: 0,
    end: 7,
  ),
  kind: Call(Expression(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Primary(Primary(
      span: Span(
        start: 0,
        end: 1,
      ),
      kind: Binding(Symbol(
        span: Span(
          start: 0,
          end: 1,
        ),
        inner: Interned(6563574591185256773, PhantomData),
      ), None),
      id: NodeId(0),
    )),
    id: NodeId(1),
  ), [
    Expression(
      span: Span(
        start: 2,
        end: 3,
      ),
      kind: Primary(Primary(
        span: Span(
          start: 2,
          end: 3,
        ),
        kind: Binding(Symbol(
          span: Span(
            start: 2,
            end: 3,
          ),
          inner: Interned(14504427626919653262, PhantomData),
        ), None),
        id: NodeId(2),
      )),
      id: NodeId(3),
    ),
    Expression(
      span: Span(
        start: 4,
        end: 5,
      ),
      kind: Primary(Primary(
        span: Span(
          start: 4,
          end: 5,
        ),
        kind: Binding(Symbol(
          span: Span(
            start: 4,
            end: 5,
          ),
          inner: Interned(579860146683532731, PhantomData),
        ), None),
        id: NodeId(4),
      )),
      id: NodeId(5),
    ),
  ]),
  id: NodeId(6),
))
