crates/tackc_parser/src/ast/snapshots/tackc_parser__ast__expr__run_expr_test@types.tck.snap
---
source: crates/tackc_parser/src/ast/expr.rs
expression: expr
input_file: crates/tackc_parser/src/ast/expr-parse/types.tck
---
Ok(Expression(
  span: Span(
    start: 0,
    end: 11,
  ),
  kind: Call(Expression(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Primary(Primary(
      span: Span(
        start: 0,
        end: 1,
      ),
      kind: Binding(Symbol(
        span: Span(
          start: 0,
          end: 1,
        ),
        inner: Interned(6563574591185256773, PhantomData),
      ), None),
      id: NodeId(
        node: 0,
        file: 5610755587868059958,
      ),
    )),
    id: NodeId(
      node: 1,
      file: 5610755587868059958,
    ),
  ), [
    Some(Expression(
      span: Span(
        start: 2,
        end: 5,
      ),
      kind: Primary(Primary(
        span: Span(
          start: 2,
          end: 5,
        ),
        kind: I32,
        id: NodeId(
          node: 2,
          file: 5610755587868059958,
        ),
      )),
      id: NodeId(
        node: 3,
        file: 5610755587868059958,
      ),
    )),
    Some(Expression(
      span: Span(
        start: 7,
        end: 10,
      ),
      kind: Primary(Primary(
        span: Span(
          start: 7,
          end: 10,
        ),
        kind: U32,
        id: NodeId(
          node: 4,
          file: 5610755587868059958,
        ),
      )),
      id: NodeId(
        node: 5,
        file: 5610755587868059958,
      ),
    )),
  ]),
  id: NodeId(
    node: 6,
    file: 5610755587868059958,
  ),
))
